encoder: on illegal filename errors, retry with a sanitized name

https://bugzilla.gnome.org/show_bug.cgi?id=720217